5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1649_2443.log
== TEST (2019-04-11 19:54:41) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2")
1= ((4*pi)*(r**3))/3
2= (pi*(x**2)*((3*r)-x))/3

if (opcao==1):
	print(round(1, 4))
else (opcao==2):
	print(round(2, 4))
	

-- ERROR:
File "XXXX", line 10
    else (opcao==2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:54:53) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2")
1= ((4*pi)*(r**3))/3
2= (pi*(x**2)*((3*r)-x))/3

if (opcao==1):
	print(round(1, 4))
else:
	print(round(2, 4))
	

-- ERROR:
File "XXXX", line 5
    1= ((4*pi)*(r**3))/3
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:55:22) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2")
o1= ((4*pi)*(r**3))/3
o2= (pi*(x**2)*((3*r)-x))/3

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:15) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2 ")
o2= ((4*pi)*(r**3))/3
o1= (pi*(x**2)*((3*r)-x))/3

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:01:20) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2 ")
o2= (((4*pi)*(r**3))/3)-((pi*(x**2)*((3*r)-x))/3)
o1= (pi*(x**2)*((3*r)-x))/3-((4*pi)*(r**3))/3))

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- ERROR:
File "XXXX", line 6
    o1= (pi*(x**2)*((3*r)-x))/3-((4*pi)*(r**3))/3))
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:01:56) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2 ")
o2= (((4*pi)*(r**3))/3)-((pi*(x**2)*((3*r)-x))/3)
o1= (pi*(x**2)*((3*r)-x))/3-(((4*pi)*(r**3))/3)

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:02:10) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2 ")
o2= (((4*pi)*(r**3))/3)-((pi*(x**2)*((3*r)-x))/3)
o1= (pi*(x**2)*((3*r)-x))/3-(((4*pi)*(r**3))/3)

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- EXECUTION TIME:
0.191265
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:02:13) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2 ")
o2= (((4*pi)*(r**3))/3)-((pi*(x**2)*((3*r)-x))/3)
o1= (pi*(x**2)*((3*r)-x))/3-(((4*pi)*(r**3))/3)

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:02:32) 
-- CODE:
from math import*
r=float(input("valor de r "))
x=float(input("valor da calota de ar "))
opcao=input("1 ou 2 ")
o2= (((4*pi)*(r**3))/3)-((pi*(x**2)*((3*r)-x))/3)
o1= (pi*(x**2)*((3*r)-x))/3-(((4*pi)*(r**3))/3)

if (opcao==o1):
	print(round(o1, 4))
else:
	print(round(o2, 4))
	

-- EXECUTION TIME:
0.148715
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:52:57) 
-- CODE:
raio=float(input("raio"))
altura=float(input("altura"))
num=int(input("num"))
from math import*
vol=((4*pi)*(raio**3))/3
volar=(pi*(altura**2)*(3*raio-altura))/3
volcomb=vol-volar
if(num==1):
	print(round(volar,4))
else:
	print(round(volcomb,4))
	

-- EXECUTION TIME:
0.13873
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
